# reverse-academy

./: .env.example  .gitignore  AGENTS.md  LEARNING-PATH-TEMPLATE.md  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  playwright.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
deploy/: deploy.sh  nginx-combined.conf  nginx-reverse-academy.conf  push.sh  setup-server.sh  update.sh
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  validate-paths.cjs  vite.config.ts
frontend/messages/: en.json  fr.json
frontend/scripts/: validate-content.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/static/: robots.txt
nginx/: nginx.conf
rust-api/: Cargo.toml  Dockerfile
rust-api/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_paths.sql  004_create_progress.sql  005_create_achievements.sql  006_create_preferences.sql  007_create_email_tokens.sql  008_create_oauth_accounts.sql  009_create_analytics.sql  010_expand_constraints.sql
rust-api/src/: config.rs  error.rs  main.rs
rust-api/src/middleware/: auth.rs  rate_limit.rs
rust-api/src/models/: achievement.rs  mod.rs  progress.rs  user.rs
rust-api/src/routes/: achievements.rs  admin.rs  analytics.rs  auth.rs  execute.rs  health.rs  mod.rs  paths.rs  progress.rs  users.rs
rust-api/src/services/: achievement_engine.rs  mod.rs  progress_service.rs
scripts/: dev.sh  seed-db.py  seed-paths.cjs  setup-piston-languages.sh
tests/component/: CodeSandbox.test.ts  OnboardingFlow.test.ts  (+1 more)
(+149 files in other folders)
