[package]
name = "reverse-academy-api"
version = "0.1.0"
edition = "2021"
description = "Reverse Academy — Axum REST API backend"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
libsql = "0.4"
jsonwebtoken = "9"
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v7"] }
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
